--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Assignment 1</title>
+    <title>ADVANCING TECHNOLOGY</title>
   </head>
 
   <body>
